--- a/apps/ios/ieltseye/www/index.html
+++ b/apps/ios/ieltseye/www/index.html
@@ -23,6 +23,8 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-responsive.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 
 
@@ -37,11 +39,13 @@
             app.initialize();
         </script>
         
-        <div class="app" id="app">
-            <div data-role="header" data-position="fixed">
-                <a href="#" data-role="button" data-icon="refresh" data-iconpos="notext" data-theme="c" data-inline="true" id="refresh" class="ui-btn-right">Refresh</a>
-                <a href="#" data-role="button" data-icon="home" data-iconpos="notext" data-theme="c" data-inline="true" id="ieltseyeHome" class="ui-btn-left">Home</a>
-                <h4><a href="#" onclick="goUserHome(3594633532)">雅思口语网蹲哥</a></h4>
+        <div class="app ui-gird-solo" id="app">
+            <div class="ui-gird-solo">
+                <div data-role="header" data-position="fixed">
+                    <a href="#" data-role="button" data-icon="refresh" data-iconpos="notext" data-theme="c" data-inline="true" id="refresh" class="ui-btn-right">Refresh</a>
+                    <a href="#" data-role="button" data-icon="home" data-iconpos="notext" data-theme="c" data-inline="true" id="ieltseyeHome" class="ui-btn-left">Home</a>
+                    <h4><a href="#" onclick="goUserHome(3594633532)">雅思口语网蹲哥</a></h4>
+                </div>
             </div>
             <div class="ui-grid-solo">
                 <div class="ui-block-a">
