--- a/apps/ios/ieltseye/www/index.html
+++ b/apps/ios/ieltseye/www/index.html
@@ -21,12 +21,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, target-densitydpi=medium-dpi, user-scalable=0" />
-        <!--<meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />-->
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
-
-
         <title>雅思口语网蹲哥</title>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
@@ -37,6 +34,7 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        
         <div data-role="page">
             <div data-role="header" data-position="fixed">
                 <a href="#" data-role="button" data-icon="refresh" data-iconpos="notext" data-theme="c" data-inline="true" id="refresh" class="ui-btn-right">Refresh</a>
