--- a/apps/ios/ieltseye/www/index.html
+++ b/apps/ios/ieltseye/www/index.html
@@ -21,7 +21,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=low-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1,  minimum-scale=1, width=320, height=device-height, target-densitydpi=low-dpi" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.css" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>雅思口语网蹲哥</title>
@@ -66,16 +66,6 @@
         <script type="text/javascript" src="js/index.js"></script>
         <script type="text/javascript">
             app.initialize();
-        </script>
-        <script type="text/javascript">
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-             })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-            
-            ga('create', 'UA-42471034-1', 'ieltseye.com');
-            ga('send', 'pageview');
-            
         </script>
     </body>
 </html>
