plus google admob into ios

--- a/apps/IELTSEye/platforms/android/assets/www/index.html
+++ b/apps/IELTSEye/platforms/android/assets/www/index.html
@@ -61,12 +61,13 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div data-role="footer">
                 <div class="ui-grid-a">
                     <div class="ui-block-a"><a id="prevPage" href="#" data-role="button" data-icon="arrow-l" data-iconpos="left"  data-theme="c">上一页</a></div>
                     <div class="ui-block-b"><a id="nextPage" href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" data-theme="c">下一页</a></div>
                 </div>
+            </div>
+            <div data-role="footer">
+                    Copyright © 2013-2020 by IELTSEYE. <br />All Rights Reserved.<br />
             </div>
         </div>
     </body>
