--- a/apps/IELTSEye/platforms/android/assets/www/index.html
+++ b/apps/IELTSEye/platforms/android/assets/www/index.html
@@ -29,13 +29,15 @@
         <title>雅思口语网蹲哥</title>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
-        <script type="text/javascript" src="js/jquery.mobile.min.js"></script>
+        <script type="text/javascript">
+            $(document).on('pageinit', function($){
+                app.initialize();
+            });
+        </script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/jquery.mobile.min.js"></script>
     </head>
     <body>
-        <script type="text/javascript">
-            app.initialize();
-        </script>
         <div data-role="page" id="indexView">
             <div data-role="header" data-position="fixed">
                 <a href="#" data-role="button" data-icon="refresh" data-iconpos="notext" data-theme="c" data-inline="true" id="refresh" class="ui-btn-right">Refresh</a>
@@ -66,7 +68,7 @@
                     <div class="ui-block-b"><a id="nextPage" href="#" data-role="button" data-icon="arrow-r" data-iconpos="right" data-theme="c">下一页</a></div>
                 </div>
             </div>
-            <div data-role="footer">
+            <div data-role="footer" class="footer">
                     Copyright © 2013-2020 by IELTSEYE. <br />All Rights Reserved.<br />
             </div>
         </div>
