--- a/apps/IELTSEye/platforms/android/assets/www/index.html
+++ b/apps/IELTSEye/platforms/android/assets/www/index.html
@@ -30,6 +30,13 @@
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/jquery.min.js"></script>
         <script type="text/javascript">
+            // $( document ).on( "mobileinit", function() {
+            //     // Make your jQuery Mobile framework configuration changes here!
+            //     $.support.cors=true;
+            //     $.mobile.allowCrossDomainPages = true;
+            //     $.mobile.pushStateEnabled = false;
+            //     $.mobile.allowCrossDomainPages = true;
+            // });
             $(document).on('pageinit', function($){
                 app.initialize();
             });
